--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>service-ribbon</module>
     <module>serice-feign</module>
     <module>service-zuul</module>
+    <module>config-server</module>
   </modules>
 
   <properties>
