--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>serice-feign</module>
     <module>service-zuul</module>
     <module>config-server</module>
+    <module>config-client</module>
   </modules>
 
   <properties>
