--- a/service-hi-8762/src/main/resources/application.yml
+++ b/service-hi-8762/src/main/resources/application.yml
@@ -8,4 +8,12 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/eureka:
+                     client:
+                       serviceUrl:
+                         defaultZone: http://peer2:8769/eureka/,http://peer1:8761/eureka/
+                     server:
+                       port: 8762
+                     spring:
+                       application:
+                         name: service-hi
